# todo-backend

./: .gitignore  pyproject.toml
src/: settings.py  urls.py
todo/: models.py  urls.py  views.py
todo/migrations/: 0001_initial.py
